mik-sdk-macros/tests/ui/derive/query_on_enum.rs
use mik_sdk_macros::Query;

// Error: Query derive only supports structs
#[derive(Query)]
enum SearchParams {
    Simple,
    Complex,
}

fn main() {}
